# speech-provider-espeak

./: .gitignore  Cargo.toml  README.md  meson.build
.github/workflows/: build-repo.yml
build-aux/: build_voices.sh  espeak-cargo-source.json  generate_flatpakrefs.py  generate_voice_manifests.py  org.espeak.Speech.Provider.json
build-aux/voices/: org.espeak.Speech.Provider.Voice.Alex.json  org.espeak.Speech.Provider.Voice.Alicia.json  org.espeak.Speech.Provider.Voice.Andrea.json  org.espeak.Speech.Provider.Voice.Andy.json  org.espeak.Speech.Provider.Voice.Annie.json  org.espeak.Speech.Provider.Voice.AnxiousAndy.json  org.espeak.Speech.Provider.Voice.Demonic.json  org.espeak.Speech.Provider.Voice.Denis.json  org.espeak.Speech.Provider.Voice.Diogo.json  org.espeak.Speech.Provider.Voice.Gene.json  org.espeak.Speech.Provider.Voice.Gene2.json  org.espeak.Speech.Provider.Voice.Henrique.json  org.espeak.Speech.Provider.Voice.Hugo.json  org.espeak.Speech.Provider.Voice.Jacky.json  org.espeak.Speech.Provider.Voice.Lee.json  org.espeak.Speech.Provider.Voice.Marco.json  org.espeak.Speech.Provider.Voice.Mario.json  org.espeak.Speech.Provider.Voice.Michael.json  org.espeak.Speech.Provider.Voice.Mike.json  org.espeak.Speech.Provider.Voice.Mr_serious.json  org.espeak.Speech.Provider.Voice.Nguyen.json  org.espeak.Speech.Provider.Voice.RicishayMax.json  org.espeak.Speech.Provider.Voice.RicishayMax2.json  org.espeak.Speech.Provider.Voice.RicishayMax3.json  org.espeak.Speech.Provider.Voice.Storm.json  org.espeak.Speech.Provider.Voice.Tweaky.json  org.espeak.Speech.Provider.Voice.UniRobot.json  org.espeak.Speech.Provider.Voice.adam.json  org.espeak.Speech.Provider.Voice.anika.json  org.espeak.Speech.Provider.Voice.anikaRobot.json  org.espeak.Speech.Provider.Voice.announcer.json  org.espeak.Speech.Provider.Voice.antonio.json  org.espeak.Speech.Provider.Voice.aunty.json  org.espeak.Speech.Provider.Voice.belinda.json  org.espeak.Speech.Provider.Voice.benjamin.json  org.espeak.Speech.Provider.Voice.boris.json  org.espeak.Speech.Provider.Voice.caleb.json  (+64 more)
data/: org.espeak.Speech.Provider.metainfo.xml
src/: main.rs  meson.build
