[package]
name = "speech-provider-espeak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.13"
zvariant = "3.6"
zbus_names = "2.2.0"
async-std = { version = "1.12.0", features =  ["attributes"] }
espeakng-sys = { version = "0.2.0", features=["clang-runtime"] }
async-io = "2.3.2"
lazy_static = "1.4.0"
libc = "0.2"
bitflags = "2.4.1"
speechprovider = { git = "https://github.com/project-spiel/rust-bindings.git", package = "speechprovider" }
inotify = "0.10.2"